# cli-repl-kit

./: .gitignore  CHANGELOG.md  README.md  history  pyproject.toml
.github/workflows/: quality.yml
cli_repl_kit/: __init__.py  config.yaml
cli_repl_kit/core/: __init__.py  banner_builder.py  command_executor.py  completion.py  config.py  formatting.py  key_bindings.py  layout.py  output_capture.py  repl.py  state.py  validation_manager.py
cli_repl_kit/plugins/: base.py  validation.py
demo/: __main__.py  cli.py  commands.py  pyproject.toml
docs/: CODE_REVIEW.md  COMPLETION_SUMMARY.md  Claude Code UI Plan.md  IMPLEMENTATION_PLAN.md  PHASE_4_SUMMARY.md  Progress_Tracker.md  REFACTORING_COMPLETE.md  SECURITY.md  architecture.md  refactor_plan.md  test_summary.md
example/: README.md  __main__.py  cli.py  commands.py  pyproject.toml  run.sh  validating_commands.py
examples/: 01_basic_hello.py  02_with_arguments.py  03_validation.py  04_subcommands.py  05_advanced.py  README.md
examples/hello-world/: README.md  pyproject.toml  run.sh
examples/hello-world/hello_world/: cli.py  commands.py
src/cli_repl_kit/: __init__.py
src/cli_repl_kit/core/: repl.py
src/cli_repl_kit/plugins/: base.py
src/cli_repl_kit/ui/: __init__.py
tests/integration/: test_auto_validation_modes.py  test_cli_mode.py  test_user_workflows.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_auto_validation.py  test_banner_builder.py  test_command_executor.py  test_completion.py  test_config.py  test_custom_layout.py  test_demo_commands.py  test_formatting.py  test_key_bindings.py  test_layout.py  test_layout_builder.py  test_layout_menu_height.py  test_output_capture.py  test_plugin_base.py  test_repl_core.py  test_state.py  test_styles.py  test_validation.py  test_validation_manager.py
