[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-demo"
version = "0.1.0"
description = "Hello World demo app for cli-repl-kit"
dependencies = [
    "cli-repl-kit",
]

[project.scripts]
hello-demo = "demo.cli:main"

[project.entry-points."repl.commands"]
hello_demo = "demo.commands:HelloCommandsPlugin"

[tool.setuptools.packages.find]
where = ["."]
